--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -30,7 +30,7 @@
         />
         <div class="info">
             <a [routerLink]="['/profile']" class="d-block">
-                {{ user.profile.name }}
+                {{ user.name }}
             </a>
         </div>
     </div>
