--- a/src/app/pages/masters/account-master/sub-groups/sub-groups.component.html
+++ b/src/app/pages/masters/account-master/sub-groups/sub-groups.component.html
@@ -32,7 +32,7 @@
               <h3>Group List</h3>
             </div>
             <div class="col-md-3">
-              <button class="btn btn-block btn-primary " (click)="navigateTo('/account-master/new-account')">New</button>
+              <button class="btn btn-block btn-primary " (click)="navigateTo('/account-master/sub-groups/new-group')">New</button>
             </div>
           </div>
         </div>
@@ -46,9 +46,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let account of accounts">
-                <td>{{ account.name }}</td>
-                <td>{{account.type}}</td>
+              <tr *ngFor="let group of (group$ | async)">
+                <td>{{ group.name }}</td>
+                <td>{{group.description}}</td>
                 <!-- <td>
                   <button class="btn btn-sm btn-primary" (click)="editAccount(account)">
                     <i class="fa fa-edit"></i> 
@@ -61,9 +61,9 @@
                     View
                     </a>&nbsp; -->
                     <div style="align-items: center;">
-                        <a class="btn btn-info btn-sm" href="#"><i class="fas fa-pencil-alt"></i>Edit</a>
+                        <a class="btn btn-info btn-sm"  (click)="editGroup(group)"><i class="fas fa-pencil-alt"></i>Edit</a>
                         &nbsp;
-                        <a class="btn btn-danger btn-sm" href="#"><i class="fas fa-trash"></i>Delete</a>
+                        <a class="btn btn-danger btn-sm"  (click)="deleteGroup(group.id)"><i class="fas fa-trash"></i>Delete</a>
                     </div>
                 </td>
               </tr>
@@ -78,7 +78,7 @@
               <h3>Sub Group List</h3>
             </div>
             <div class="col-md-3">
-              <button class="btn btn-block btn-primary " (click)="navigateTo('/account-master/new-account')">New</button>
+              <button class="btn btn-block btn-primary " (click)="navigateTo('/account-master/sub-groups/new-sub-group')">New</button>
             </div>
           </div>
         </div>
@@ -92,9 +92,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let val of subGroups">
-                <td>{{ val.sub }}</td>
-                <td>{{val.group}}</td>
+              <tr *ngFor="let subgroup of (subgroups$ | async)">
+                <td>{{ subgroup.name }}</td>
+                <td>{{subgroup.group_name}}</td>
                 <!-- <td>
                   <button class="btn btn-sm btn-primary" (click)="editAccount(account)">
                     <i class="fa fa-edit"></i> 
@@ -107,9 +107,9 @@
                     View
                     </a>&nbsp; -->
                     <div style="align-items: center;">
-                        <a class="btn btn-info btn-sm" href="#"><i class="fas fa-pencil-alt"></i>Edit</a>
+                        <a class="btn btn-info btn-sm"(click)="editSubGroup(subgroup)" ><i class="fas fa-pencil-alt"></i>Edit</a>
                         &nbsp;
-                        <a class="btn btn-danger btn-sm" href="#"><i class="fas fa-trash"></i>Delete</a>
+                        <a class="btn btn-danger btn-sm" (click)="deleteSubGroup(subgroup.id)"><i class="fas fa-trash"></i>Delete</a>
                     </div>
                 </td>
               </tr>
